@@ -34,16 +34,18 @@ cd inst
 find . -type f -print > ../files.lst
 tar cvf amhello-1.0-i686.tar.gz `cat ../files.lst` > tar.got 2>&1
 
+EXEEXT=`sed -n -e 's/^EXEEXT *= *//p' < ../Makefile`
+
 if tar --version </dev/null | grep GNU; then
   LC_ALL=C sort tar.got > t
   mv -f t tar.got
-  diff - tar.got <<'END'
-./usr/bin/hello
+  diff - tar.got <<END
+./usr/bin/hello$EXEEXT
 ./usr/share/doc/amhello/README
 END
 else
   : Be laxer with other tar implementations, to avoid spurious failures.
-  $EGREP '(^| )\./usr/bin/hello( |$)' tar.got
+  $EGREP '(^| )\./usr/bin/hello'$EXEEXT'( |$)' tar.got
   $EGREP '(^| )\./usr/share/doc/amhello/README( |$)' tar.got
 fi
 
