@@ -1,4 +1,8 @@
-2011-09-04 Stefano Lattarini  <stefano.lattarini@gmail.com>
+2011-09-05  Peter Rosin  <peda@lysator.liu.se>
+
+	* tests/amhello-binpkg.test: Add missing $EXEEXT usage.
+
+2011-09-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	fix: list test 'vala-vpath.test' in XFAIL_TESTS
 	* tests/Makefile.am (XFAIL_TESTS): Update.
